# mars

./: .lgtm.yml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cancel.yml  ci.yml
doc/: CMakeLists.txt  README.md  doxygen_cfg
include/: bi_alphabet.hpp  index.hpp  input.hpp  input_output.hpp  ipknot.hpp  motif.hpp  motif_store.hpp  multiple_alignment.hpp  profile_char.hpp  profile_sequence.hpp  search.hpp  settings.hpp  structure.hpp
lib/ipknot/: fold.cpp  ip.cpp  ipknot.cpp
src/: CMakeLists.txt  bi_alphabet.hpp  format_clustal.hpp  format_stockholm.hpp  index.cpp  index.hpp  index_io.cpp  index_io.hpp  input_output.cpp  input_output.hpp  location.cpp  location.hpp  main.cpp  motif.cpp  motif.hpp  motif_store.cpp  multiple_alignment.cpp  multiple_alignment.hpp  profile_char.hpp  search.cpp  search.hpp  settings.cpp  settings.hpp  structure.cpp  structure.hpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt  bi_alphabet_test.cpp  index_test.cpp  input_test.cpp  motif_store_test.cpp  motif_test.cpp  profile_test.cpp
test/cli/: CMakeLists.txt  argument_parser_test.cpp  cli_test.hpp  fastq_to_fasta_options_test.cpp
test/cmake/: app_datasources.cmake  build_googletest.cmake
test/data/: SSU_rRNA_5.sth  datasources.cmake  genome.fa  genome2.fa.marsindex  tRNA.aln
